@@ -95,14 +95,11 @@ private:
 	void allow_format( bool b )	{ 
 		menu_partition .items()[ 8 ] .set_sensitive( b ); }
 	
-	void allow_unmount( bool b )	{ 
+	void allow_toggle_swap_mount_state( bool b )	{ 
 		menu_partition .items()[ 10 ] .set_sensitive( b ); }
 	
-	void allow_toggle_swap( bool b )	{ 
-		menu_partition .items()[ 11 ] .set_sensitive( b ); }
-	
 	void allow_info( bool b )	{
-		menu_partition .items()[ 13 ] .set_sensitive( b ); }
+		menu_partition .items()[ 12 ] .set_sensitive( b ); }
 	
 	void allow_undo( bool b )	{ 
 		toolbar_main .get_nth_item( 8 ) ->set_sensitive( b ); 
@@ -117,6 +114,7 @@ private:
 	//threads..
 	void thread_refresh_devices() ;
 	void thread_unmount_partition( bool * succes, Glib::ustring * error ) ;
+	void thread_mount_partition( bool * succes, Glib::ustring * error ) ;
 	void thread_toggle_swap( bool * succes, Glib::ustring * error ) ;
 		
 	//signal handlers
@@ -148,8 +146,7 @@ private:
 	void activate_delete();
 	void activate_info();
 	void activate_format( GParted::FILESYSTEM new_fs );
-	void activate_unmount() ;
-	void activate_toggle_swap() ;
+	void toggle_swap_mount_state() ;
 	void activate_disklabel() ;
 	
 	void activate_undo();
