@@ -1,4 +1,10 @@
 2006-03-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* include/Win_GParted.h,
+	  src/Win_GParted.cc: added basic support for mounting unmounted
+	  partitions on mountpoints found in /etc/fstab
+
+2006-03-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	
 	* src/DrawingAreaVisualDisk.cc: changed MIN_SIZE from static 20 to
 	  BORDER * 2 + 2 
